switch to using URL instead of URI; add some tests for CLI failures